<resources>
    <string name="app_name">GeoTrackFamily</string>
    <string name="track_family">Track family</string>
    <string name="login">Ingresar</string>
    <string name="update_user">Guardar</string>
    <string name="logout">Cerrar session</string>
    <string name="register">Registrarme</string>
    <string name="title_continue">Continuar</string>
    <string name="forgot_password">Olvide mi contraseña</string>
    <string name="login_email">Escribe correo electronico</string>
    <string name="login_password">Escribe contraseña</string>
    <string name="login_repeat_password">Repite la contraseña</string>
    <string name="register_name">Escribe nombre y apellido</string>
    <string name="dont_have_friends">Aun no tienes amigos agrega uno</string>
    <string name="menu_home">Home</string>
    <string name="find_friend_by_name">Busca a tu amigo por nombre</string>
    <string name="my_friends">Mis amigos</string>
    <string name="see_friend">Ver amigo</string>
    <string name="dont_have_friends_location">No puedes ver la ubicacion de tu amigo, agrega uno</string>
    <string name="zone_dangerous">Zonas riesgo</string>
    <string name="zone_dangerous_location">No puedes definir zonas de riesgo para tu amigo, agrega uno</string>
    <string name="find_friend">Agrega un amigo</string>
    <string name="profile">Perfil</string>
    <string name="find_friend_by_name_email">Escribe el nombre o e-mail</string>
    <string name="add_friend">Agregar</string>
    <string name="shared_preferences">geo.track_family.ecu</string>
    <string name="title_add_friend">Agrega un amigo</string>
    <string name="have_friends_request"> <u>Tienes solicitudes de amigos pendientes</u> </string>
    <string name="cancel">cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="user_name">Escribe tu nombre</string>
    <string name="geozone_alert_title">Quieres guardar esta geozona para: </string>
    <string name="geofences_friend">Geofences</string>
    <string name="geofences_friend_lat">Lat.</string>
    <string name="geofences_friend_long">Long.</string>
    <string name="ask_permission_location">Habilita el permiso de ubicacion</string>
    <string name="ask_permission_notification">Habilita el permiso de notificaciones</string>
    <string name="enable_location">Habilitar ubicación</string>
    <string name="disable_location">Deshabilitar ubicación</string>
    <string name="track_friend">Rastrea un amigo</string>
    <string name="geozone_friend">Geofences amigo</string>
    <string name="notifications">Notificaciones</string>
    <string name="location_time_friend_shorta">Define el horario que </string>
    <string name="location_time_friend_shortb">va a ver tu ubicación</string>
    <string name="time_start">Hora inicio</string>
    <string name="time_end">Hora fin</string>

    <!-- errors -->
    <string name="error_fill_user">LLena el nombre y el email</string>
    <string name="error_fill">LLena todos los campos</string>
    <string name="error_no_data">No hay datos</string>
    <string name="error_data">Hay datos</string>
    <string name="error_password_not_same">Las contraseñas no coinciden</string>
    <string name="error_not_enable_gps">Habilita gps para continuar</string>
    <string name="error_time">Hora start debe ser menor a la hora fin</string>
</resources>